[package]
name = "ika"
version = "0.2.0"
authors = ["extrasharp <genericpb@gmail.com>"]
edition = "2018"
license = "MIT"
description = "object pool"
repository = "https://github.com/extrasharp/ika"

keywords = ["pool", "recycle"]
categories = ["memory-management", "data-structures"]

[dependencies]
