[package]
name = "ika"
version = "0.4.1"
edition = "2018"
description = "rusty object pool"
keywords = ["pool", "recycle"]
categories = ["memory-management", "data-structures"]
authors = ["extrasharp <genericpb@gmail.com>"]
repository = "https://github.com/extrasharp/ika"
license = "MIT"
readme = "README.md"

[dependencies]
